# privacyforms.pdf

./: .gitignore  AGENTS.md  AUDIT.md  LICENSE  Makefile  README.md  REVIEW.md  SECURITY-AUDIT.md  SECURITY_AUDIT_REPORT.md  data.json  forms.html  intent.md  noxfile.py  out.json  parse_samples.sh  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
demo/: data.json  fill_demo.sh  fill_sample.py
docs/: ARCHITECTURE.md  EXTENSION_QUALITY_ANALYSIS.md
docs/diagrams/: architecture-components.mmd  class-diagram.mmd  exception-hierarchy.mmd  package-structure.mmd  sequence-cli.mmd  sequence-extract.mmd  sequence-fill.mmd
privacyforms_pdf/: __init__.py  cli.py  extractor.py  filler.py  hooks.py  json_utils.py  label_extractor.py  models.py  parser.py  reader.py  schema.py  schema_layout.py  security.py  security_io.py  utils.py
privacyforms_pdf/backends/: __init__.py  pdfcpu.py
privacyforms_pdf/commands/: __init__.py  pdf_check.py  pdf_encrypt.py  pdf_extract.py  pdf_fill_form.py  pdf_get_value.py  pdf_info.py  pdf_list_fields.py  pdf_list_permissions.py  pdf_parse.py  pdf_schema.py  pdf_set_permissions.py  pdf_verify_data.py  pdf_verify_json.py  utils.py
samples/: 1001_e_0705.json  Bescheinigung_ueber_die_Anrechnung_von_Studienzeiten.json  Beschwerde_wegen_Falschauskunft.json  FilledForm.json  Formloser-Antrag-Inland.json  ID.3 Pure 24 Mon 10.000 km 23.02.2026.json  Invoice-LHA-WIL10-2026-00001765.json  SampleForm-1.json  VFNM-2018-05-22-mustervorlage-vorblatt.json  incometaxform (1).json  incometaxform.json  statementidentify.json
specs/: PDF_REPRESENTATION.md  SUGGESTIONS.md  TUTORIAL.md  __init__.py  convert_all.sh  pdf_layout.py  pdf_parser.py  pdf_schema.py  validate_json_form_data.py  verify_form_json.py
tests/: conftest.py  test_backends_pdfcpu.py  test_cli.py  test_commands_edge_cases.py  test_demo.py  test_extractor.py  test_extractor_delegated.py  test_filler.py  test_json_utils.py  test_label_extractor.py  test_parser_helpers.py  test_quick_wins.py  test_reader.py  test_schema_document.py  test_schema_validators.py  test_security.py  test_security_io.py  test_specs.py  test_utils.py
tests/commands/: conftest.py  test_pdf_check.py  test_pdf_encrypt.py  test_pdf_extract.py  test_pdf_fill_form.py  test_pdf_get_value.py  test_pdf_info.py  test_pdf_list_fields.py  test_pdf_list_permissions.py  test_pdf_parse.py  test_pdf_schema.py  test_pdf_set_permissions.py  test_pdf_verify_data.py  test_pdf_verify_json.py
