[project]
name = "privacyforms.pdf"
version = "0.2.0"
description = "Python library to extract and fill PDF forms using pypdf"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Andreas Jung", email = "info@zopyx.com" }]
license = { text = "MIT" }
dependencies = [
    "click>=8",
    "pluggy>=1",
    "pydantic>=2",
    "pypdf>=6.10.2",
    "rich>=13",
]

[project.optional-dependencies]
labels = [
    "pymupdf>=1.24.0",
]

[project.scripts]
pdf-forms = "privacyforms_pdf.cli:main"

[project.entry-points."privacyforms_pdf.commands"]
fill_form = "privacyforms_pdf.commands.pdf_fill_form"
info = "privacyforms_pdf.commands.pdf_info"
parse = "privacyforms_pdf.commands.pdf_parse"
schema = "privacyforms_pdf.commands.pdf_schema"
verify_data = "privacyforms_pdf.commands.pdf_verify_data"
verify_json = "privacyforms_pdf.commands.pdf_verify_json"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "nox>=2026.2.9",
    "pip-audit>=2.10.0",
    "pytest>=9.0.3",
    "pytest-cov>=7",
    "ruff>=0.15",
    "safety>=3.7.0",
    "setuptools>=75",
    "ty>=0.0.21",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
]
ignore = ["D100", "D104"]  # Missing docstring in public module/package

[tool.ruff.lint.pydocstyle]
convention = "google"



[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=privacyforms_pdf --cov-report=term-missing --cov-report=html --cov-fail-under=95"

[tool.coverage.run]
source = ["privacyforms_pdf"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.setuptools.packages.find]
where = ["."]
include = ["privacyforms_pdf*"]
exclude = ["demo*", "samples*", "tests*"]
